package com.hk.opencoding.core.model.base;

import com.hk.opencoding.core.llm.model.ChatModel;
import com.hk.opencoding.core.llm.model.StreamingChatModel;

/**
 * @author HK意境
 * @version 1.0
 * @since 2026/9/1 23:18
 */
public abstract class AbstractChatModel extends AbstractAiModel implements ChatModel {



}
