package com.hk.opencoding.core.model.base;

import com.hk.opencoding.core.llm.model.EmbeddingModel;
import com.hk.opencoding.core.llm.model.ImageModel;

/**
 * @author HK意境
 * @version 1.0
 * @since 2026/9/1 23:18
 */
public class AbstractEmbeddingModel extends AbstractAiModel implements EmbeddingModel {


    
}
