package com.hk.opencoding.core.model.base;

import com.hk.opencoding.core.llm.model.ChatModel;
import com.hk.opencoding.core.llm.model.ImageModel;
import com.hk.opencoding.core.llm.model.StreamingChatModel;

/**
 * @author HK意境
 * @version 1.0
 * @since 2026/9/1 23:18
 */
public class AbstractImageModel extends AbstractAiModel implements ImageModel {


    
}
