package com.hk.opencoding.core.model.base;

import com.hk.opencoding.core.llm.model.ImageModel;
import com.hk.opencoding.core.llm.model.VideoModel;

/**
 * @author HK意境
 * @version 1.0
 * @since 2026/9/1 23:18
 */
public class AbstractVideoModel extends AbstractAiModel implements VideoModel {


    
}
