package com.hk.opencoding.core.model.specific.ollama;

import com.hk.opencoding.core.api.model.ChatModel;
import com.hk.opencoding.core.api.model.StreamingChatModel;
import com.hk.opencoding.core.model.base.AbstractStreamingChatModel;

/**
 * @author HK意境
 * @version 1.0
 * @since 2026/9/1 22:21
 */
public class OllamaChatModel extends AbstractStreamingChatModel implements ChatModel, StreamingChatModel {
}
